--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -12,3 +12,6 @@
     <% end %>
   <% end %>
 </div>
+
+<!-- Add a new review (form) -->
+<%= render 'reviews/form', restaurant: @restaurant, review: @review %>
