--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,6 +2,10 @@
 
 <ul>
   <% @restaurants.each do |restaurant| %>
-    <li><%= link_to restaurant.name, restaurant_path(restaurant) %></li>
+      <li data-restaurant-id="<%= restaurant.id %>">
+      <%= link_to restaurant.name, restaurant_path(restaurant) %>
+      <!-- Add `remote: true` to request `text/javascript` from the server -->
+      <%= link_to "Delete", restaurant, method: :delete, remote: true %>
+    </li>
   <% end %>
 </ul>
