--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for([ restaurant, review ]) do |form| %>
-  <%= form.input :content, as: :text %>
+<%= simple_form_for([ restaurant, review ], remote: true) do |form| %>
+  <%= form.input :content, label: 'What did you think?', as: :text %>
   <%= form.button :submit, class: 'btn btn-primary' %>
 <% end %>
